--- a/client/views/settings/rule-item.html
+++ b/client/views/settings/rule-item.html
@@ -14,10 +14,11 @@
                 </span>
             </span>
             <span class="label label--darkBlue2"
-                ng-repeat="dest in rule.configuration.destinations"
+                ng-repeat="dest in rule.configuration.destinations | limitTo:6 "
                 sd-tooltip="{{webPublisherSettings.getTenantUrlByCode(dest.tenant)}}" flow="left">
                 {{webPublisherSettings.getTenantNameByCode(dest.tenant)}}
             </span>
+            <span ng-if="rule.configuration.destinations.length - 6 > 0">+{{rule.configuration.destinations.length - 6}} more</span>
             <span ng-if="rule.configuration.route" class="label label--success" ng-class="{'label--hollow' : !rule.configuration.published}">
                 {{webPublisherSettings.getRouteNameByTenantAndId(code , rule.configuration.route)}}
             </span>
