--- a/client/views/settings/rule-item.html
+++ b/client/views/settings/rule-item.html
@@ -4,7 +4,7 @@
     <div class="sd-list-item__border"></div>
     <div class="sd-list-item__column sd-list-item__column--grow sd-list-item__column--no-border">
         <div class="sd-list-item__row">
-            <span class="sd-overflow-ellipsis sd-list-item--element-grow"><strong>{{rule.name}}</strong> {{rule.description}}</span>
+            <div class="sd-overflow-ellipsis sd-list-item--element-grow"><strong>{{rule.name}}</strong> <span class="sd-list-item__text-label margin--left">{{rule.description}}</span></div>
         </div>
         <div class="sd-list-item__row">
             <span class="sd-overflow-ellipsis sd-list-item--element-grow">
