--- a/client/views/settings/rule-add.html
+++ b/client/views/settings/rule-add.html
@@ -14,7 +14,7 @@
 </div>
 
 
-<div class="side-panel__footer side-panel__footer--button-box padding--bottomBig">
+<div class="side-panel__footer side-panel__footer--button-box">
 	<div class="flex-grid flex-grid--boxed-small flex-grid--wrap-items flex-grid--small-2">
 		<a class="btn btn--hollow" ng-click="webPublisherSettings.toggleCreateRule()">Cancel</a>
 		<button class="btn btn--primary"
