fix: minor href target

--- a/client/views/dashboard/tenant.html
+++ b/client/views/dashboard/tenant.html
@@ -1,6 +1,6 @@
 <div class="sd-grid-item-header">
     <h3 class="sd-grid-item-header__heading sd-overflow-ellipsis">
-        <a ng-href="{{site.outputChannel ? site.outputChannel.config.url : 'http://' + site.subdomain + '.' + site.domainName}}" flow="down">
+        <a ng-href="{{site.outputChannel ? site.outputChannel.config.url : 'http://' + site.subdomain + '.' + site.domainName}}" target="_blank">
             <span>{{ site.name }}</span><i class="icon-external"></i>
         </a>
     </h3>
